# MedCAL-Bench

./: .gitignore  README.md  pyproject.toml
FM-AL/: al_plan.sh  al_plan_test.sh  foundation_feature.py  get_feature.sh  select_samples.py
FM-AL/Foundation_models/: __init__.py
FM-AL/Foundation_models/MedCLIP/medclip/: dataset.py  modeling_medclip.py
FM-AL/utils/: feature_sampling_utils.py  load_model.py
data/dataset/config/: Heart_preprocessed.json  Kvasir_preprocessed.json  Spleen_preprocessed.json  TN3K_preprocessed.json
train/: inference.py  train.py  train_cls.py  trainer.py
train/command/: inf_Heart_all.sh  inf_Kvasir_all.sh  inf_Spleen_all.sh  inf_TN3K_all.sh  inf_breast_all.sh  inf_derma_all.sh  inf_pneumonia_all.sh  run_Breast.sh  run_Derma.sh  run_Heart.sh  run_Heart_test.sh  run_Kvasir.sh  run_Pneumonia.sh  run_Spleen.sh  run_TN3K.sh
train/datasets/: dataset.py  transforms.py
train/utils/: losses.py
